--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anuar</title>
+    <title>Anuar B.</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="content">
+        <h1>Welcome to Dynamic Background</h1>
+        <p>This is a simple example of a website with a dynamically changing background.</p>
+    </div>
 </body>
 </html>
