--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="content">
-        <h1>Welcome to Dynamic Background</h1>
-        <p>This is a simple example of a website with a dynamically changing background.</p>
+    <div class="intro">
+        <h1>Anuar Bekturganov</h1>
     </div>
 </body>
 </html>
