--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuar B.</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div class="intro">
-        <h1>Anuar Bekturganov</h1>
+        <h1>GIS </h1>
     </div>
+
+    <div class="introductory_video">
+        <video width="600" height="400" controls>
+            <source src="Resources/IntroVid1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <div class="description">
+        <p1>
+            ASD
+        </p1>
+
+
+    </div>
+
 </body>
 </html>
