--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
         </video>
     </div>
 
-    <div class="description">
+    <div class="asd">
         <p1>
-            ASD
+            
+            
+            Geographic information system
         </p1>
+
+
+    </div>
+
+    <div class="description">
+        <ul>
+            <li>TomTom API used for retrieving life traffic information</li>
+            <li>OpenWeatherMap API used for retrieving life weather information</li>
+            <li>OpenStreetMap used for the map details </li>
+          </ul>
 
 
     </div>
