--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,11 @@
         </ul>
     
     <div id="experience_intro">Experiences:</div>
-    <div id="jusan_intro">Jusan Invest</div>
-    <div id="jusan_year">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;Software Engineering Internship<br>&nbsp;&nbsp;Almaty, Kazakhstan June 2023 - August 2023</div>
+    <div class="experience-section">
+        <div id="jusan_intro">Jusan Invest</div>
+        <img id="ji_logo_id" src="./Resources/projects_r/ji_logo.png" alt="jusan_invest logo">
+    </div>
+    <div id="jusan_year">Software Engineering Internship<br>Almaty, Kazakhstan June 2023 - August 2023</div>
     <div id="jusan_description"> <ul id="jusan_main_body">
         <li>
         Worked in the frontend team of “Jusan Invest”, a subsidiary of one of Kazakhstan’s largest banks Jusan
@@ -41,12 +44,11 @@
         <li> Collaborated in the development of a limited time event at Jusan Invest: “Raffle” where I was a part of
         the team responsible for developing frontend for the mobile application (React Native).</li>
     </ul> </div>
-    <img id="ji_logo_id"
-     src="./Resources/projects_r/ji_logo.png"
-     alt="jusan_invest logo">
-
-    <div id="lifestream_intro">Lifestream</div>
-    <div id="lifestream_year">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;Software Engineering Internship<br>&nbsp;&nbsp;Almaty, Kazakhstan June 2022 - August 2022</div>
+    <div class="experience-section">
+        <div id="lifestream_intro">Lifestream</div>
+        <img id="life_stream_logo_id" src="./Resources/projects_r/new_life_logo.jpg" alt="lifestream logo">
+    </div>
+    <div id="lifestream_year">Software Engineering Internship<br>Almaty, Kazakhstan June 2022 - August 2022</div>
     <div id="lifestream_description"> <ul id="lifestream_main_body">
         <li>Created an OTT (providing media services directly to consumers) platform “Smotreshka.TV” at
         Lifestream, a video systems integration company.</li>
@@ -55,9 +57,6 @@
         <li>Collaborated on improving the RTSP client using the GStreammer library (C++). It was my first
         experience of solving challenging problems associated with efficiency of the service.</li>
     </ul> </div>
-    <img id="life_stream_logo_id"
-      src="./Resources/projects_r/new_life_logo.jpg"
-      alt="lifestream logo">
 
     <div id="projects_intro">Projects:</div>
 
@@ -81,10 +80,7 @@
 
     <div id="acne_intro">Acne Detection & Localization</div>
     <a id="acne_git" href="https://github.com/mmaciesowicz/APS360-Acne-Detection">Repository</a>
-    <img id="acne_demo" src="./Resources/projects_r/acne_demo.png" alt="acne_demo_">
-    <img id="acne_model" src="./Resources/projects_r/4_class_architecture.jpeg" alt="acne_demo_">
-    <img id="acne_work" src="./Resources/projects_r/workflow_diagram_v2.jpg" alt="acne_demo_">
-
+        <img id="acne_demo" src="./Resources/projects_r/acne_demo.jpg" alt="acne_demo_">
     <div id="acne_description"> <ul id="acne_main_body">
         <li>Group Project (APS360): created an acne detection and localization tool</li>
         <li>Coding done in Python</li>
