--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<script type="module" src="main.js"></script>
 		<div id="intro"></div>
-		<div id="ufo_prompt">Click on the UFO to see projects</div>
+		<div id="ufo_prompt"><a href="projects.html">Click on the UFO to see projects</a></div>
 		<div id="credits">
 			<ul>
 				<li>Earth Textures: Tom Patterson, www.shadedrelief.com </li>
