--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Anuar B.</title>
-		<link rel="stylesheet" href="./styles.css">
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@0.161/build/three.module.js",
-          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161/examples/jsm/"
-        }
-			}
-		</script>
-	</head>
-	<body>
-		<script type="module" src="main.js"></script>
-		<div id="intro"></div>
-		<div id="ufo_prompt"><a href="projects.html">Click on the UFO to see projects</a></div>
-		<div id="credits">
-			<ul>
-				<li>Earth Textures: Tom Patterson, www.shadedrelief.com </li>
-				<li>Flag Models: https://sketchfab.com/Spaceexplorersacademy</li>
-				<li>UFO Model: https://sketchfab.com/BlackHawk0512</li>
-			</ul>
-		</div>
-		<div class="typing-container" id="typing-container" style="display: none;">
-			<span id="typed-text"></span><span class="cursor">|</span>
-			<button class="close-button" id="close-button">X</button>
-		</div>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anuar Bekturganov</title>
+    <link rel="stylesheet" href="st/styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo"><a href="index.html">Anuar</a></div>
+        <nav>
+            <ul>
+                <li><a href="skills.html">Skills & Experience</a></li>
+               <!-- <li><a href="personal.html">Personal</a></li>--> 
+            </ul>
+        </nav>
+    </header>
+
+    <main class="profile-section">
+        <div class="profile-container">
+            <img src="Resources/avatar.jpg" alt="Anuar Bekturganov" class="profile-picture">
+            <div class="profile-description">
+                <h1>Anuar Bekturganov</h1>
+                <p>University of Toronto • 2T5 + PEY</p>
+                <p>Computer Engineering & Engineering Business Minor</p>
+            </div>
+        </div>
+    </main>
+</body>
 </html>
