--- a/skills.html
+++ b/skills.html
@@ -13,7 +13,7 @@
         <div class="logo"> <a href="index.html">Anuar</a> </div>
         <nav>
             <ul>
-                <li><a href="skills.html">Skills</a></li>
+                <li><a href="skills.html">Skills & Experience</a></li>
                 <!-- <li><a href="personal.html">Personal</a></li>--> 
             </ul>
         </nav>
