--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places section" href="#places" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Traveled</span></a>
+      </li>
     </ul>
   </nav>
 
@@ -596,6 +600,13 @@ Backend development (.NET).
               class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/anuar-bekturganov-a59126218/"
               class="hoverline" target="_blank">https://www.linkedin.com/in/anuar-bekturganov-a59126218/</a></a>
         </p>
+      </div>
+    </section>
+
+    <section id="Places" class="section scrollspy">
+      <h3 class="page-title white-text teal">Places Visited</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1qfQfDcpM2-IqiHus-WPRlD4pGdp_U5o&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
       </div>
     </section>
   </main>
