--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
         <a aria-label="Open Anuar's resume in a new tab" href="https://anuarb799.github.io/assets/resume/anuar_resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
+
+      <li class="bold">
+        <a aria-label="Navigate to the Places section" href="#places" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Traveled</span></a>
+      </li>
     </ul>
   </nav>
 
@@ -383,6 +388,33 @@ Backend development (.NET).
               </div>
             </div>
           </div>
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="quiz app" src="/assets/assignment_images/smartpen.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Smart Pen<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Pen that tracks your movement and copies your notes in digital format 
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> C++, Python, STM32</li>
+                  <li>Peripherals control</li>
+                  <li>Gyroscope, Accelerometer, Kalman Filter</li>
+
+                </ul>
+                
+              </div>
+            </div>
+          </div>
 
           
 
@@ -603,8 +635,8 @@ Backend development (.NET).
       </div>
     </section>
 
-    <section id="Places" class="section scrollspy">
-      <h3 class="page-title white-text teal">Places Visited</h3>
+    <section id="places" class="section scrollspy">
+      <h3 class="page-title white-text teal">Places Traveled</h3>
       <div class="container">
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1qfQfDcpM2-IqiHus-WPRlD4pGdp_U5o&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
       </div>
